--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,405 @@
-{
-  "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": ["./*"]
+<!DOCTYPE html>
+
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato - Claudinei | AmplaAI</title>
+    <meta name="robots" content="index, follow">
+
+```
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
+ crossorigin="anonymous"></script>
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
-}
+
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        line-height: 1.8;
+        color: #2c3e50;
+        background: #f8f9fa;
+    }
+
+    .header {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 60px 20px;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    .header h1 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+    }
+
+    .back-link {
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        margin-top: 20px;
+        padding: 10px 20px;
+        border: 2px solid white;
+        border-radius: 25px;
+        transition: all 0.3s ease;
+    }
+
+    .back-link:hover {
+        background: white;
+        color: #667eea;
+    }
+
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 40px 20px;
+    }
+
+    .contact-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 30px;
+        margin-bottom: 40px;
+    }
+
+    .contact-card {
+        background: white;
+        padding: 40px;
+        border-radius: 20px;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        transition: transform 0.3s ease;
+    }
+
+    .contact-card:hover {
+        transform: translateY(-5px);
+    }
+
+    .contact-icon {
+        font-size: 3em;
+        margin-bottom: 20px;
+    }
+
+    .contact-card h3 {
+        font-size: 1.5em;
+        color: #2c3e50;
+        margin-bottom: 15px;
+    }
+
+    .contact-card p {
+        color: #555;
+        margin-bottom: 10px;
+    }
+
+    .contact-card a {
+        color: #667eea;
+        text-decoration: none;
+        font-weight: 600;
+        transition: color 0.3s ease;
+    }
+
+    .contact-card a:hover {
+        color: #764ba2;
+    }
+
+    .form-container {
+        background: white;
+        padding: 50px;
+        border-radius: 20px;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+        margin-bottom: 40px;
+    }
+
+    .form-container h2 {
+        color: #2c3e50;
+        font-size: 2em;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .form-group {
+        margin-bottom: 25px;
+    }
+
+    .form-group label {
+        display: block;
+        font-weight: 600;
+        color: #2c3e50;
+        margin-bottom: 8px;
+    }
+
+    .form-group input,
+    .form-group textarea,
+    .form-group select {
+        width: 100%;
+        padding: 15px;
+        border: 2px solid #e0e0e0;
+        border-radius: 10px;
+        font-size: 1em;
+        font-family: inherit;
+        transition: border-color 0.3s ease;
+    }
+
+    .form-group input:focus,
+    .form-group textarea:focus,
+    .form-group select:focus {
+        outline: none;
+        border-color: #667eea;
+    }
+
+    .form-group textarea {
+        min-height: 150px;
+        resize: vertical;
+    }
+
+    .submit-btn {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 18px 50px;
+        border: none;
+        border-radius: 50px;
+        font-size: 1.1em;
+        font-weight: 700;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        width: 100%;
+    }
+
+    .submit-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+    }
+
+    .info-box {
+        background: #f0f7ff;
+        border-left: 4px solid #667eea;
+        padding: 20px;
+        margin: 30px 0;
+        border-radius: 5px;
+    }
+
+    .faq-section {
+        background: white;
+        padding: 50px;
+        border-radius: 20px;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+    }
+
+    .faq-section h2 {
+        color: #2c3e50;
+        font-size: 2em;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .faq-item {
+        margin-bottom: 25px;
+        padding-bottom: 25px;
+        border-bottom: 1px solid #e0e0e0;
+    }
+
+    .faq-item:last-child {
+        border-bottom: none;
+    }
+
+    .faq-question {
+        font-size: 1.2em;
+        font-weight: 700;
+        color: #2c3e50;
+        margin-bottom: 10px;
+    }
+
+    .faq-answer {
+        color: #555;
+        line-height: 1.8;
+    }
+
+    @media (max-width: 768px) {
+        .form-container {
+            padding: 30px 20px;
+        }
+
+        .header h1 {
+            font-size: 1.8em;
+        }
+
+        .contact-grid {
+            grid-template-columns: 1fr;
+        }
+    }
+</style>
+```
+
+</head>
+<body>
+    <div class="header">
+        <h1>Entre em Contato</h1>
+        <p>Estamos aqui para ajudar você</p>
+        <a href="/" class="back-link">← Voltar ao Site</a>
+    </div>
+
+```
+<div class="container">
+    <!-- Contact Cards -->
+    <div class="contact-grid">
+        <div class="contact-card">
+            <div class="contact-icon">📧</div>
+            <h3>E-mail</h3>
+            <p>Envie-nos uma mensagem</p>
+            <a href="mailto:ampla.ai@outlook.com">ampla.ai@outlook.com</a>
+            <p style="margin-top: 15px; font-size: 0.9em; color: #7f8c8d;">Resposta em até 48 horas</p>
+        </div>
+
+        <div class="contact-card">
+            <div class="contact-icon">💬</div>
+            <h3>Suporte Técnico</h3>
+            <p>Ajuda com problemas técnicos</p>
+            <a href="mailto:ampla.ai@outlook.com?subject=Suporte Técnico">Abrir Ticket</a>
+            <p style="margin-top: 15px; font-size: 0.9em; color: #7f8c8d;">Suporte prioritário</p>
+        </div>
+
+        <div class="contact-card">
+            <div class="contact-icon">📚</div>
+            <h3>Documentação</h3>
+            <p>Acesse nossa base de conhecimento</p>
+            <a href="https://docs.claudinei.ia.br">Ver Documentação</a>
+            <p style="margin-top: 15px; font-size: 0.9em; color: #7f8c8d;">Guias e tutoriais</p>
+        </div>
+    </div>
+
+    <!-- Contact Form -->
+    <div class="form-container">
+        <h2>Formulário de Contato</h2>
+        <form id="contactForm" action="#" method="POST">
+            <div class="form-group">
+                <label for="name">Nome Completo *</label>
+                <input type="text" id="name" name="name" required placeholder="Seu nome">
+            </div>
+
+            <div class="form-group">
+                <label for="email">E-mail *</label>
+                <input type="email" id="email" name="email" required placeholder="seu@email.com">
+            </div>
+
+            <div class="form-group">
+                <label for="subject">Assunto *</label>
+                <select id="subject" name="subject" required>
+                    <option value="">Selecione um assunto</option>
+                    <option value="suporte">Suporte Técnico</option>
+                    <option value="vendas">Vendas e Parcerias</option>
+                    <option value="feedback">Feedback e Sugestões</option>
+                    <option value="bug">Reportar Bug</option>
+                    <option value="geral">Dúvida Geral</option>
+                    <option value="outro">Outro</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="message">Mensagem *</label>
+                <textarea id="message" name="message" required placeholder="Descreva sua mensagem em detalhes..."></textarea>
+            </div>
+
+            <div class="info-box">
+                <strong>📋 Dica:</strong> Para nos ajudar a responder mais rapidamente, inclua o máximo de detalhes possível sobre sua questão ou problema.
+            </div>
+
+            <button type="submit" class="submit-btn">Enviar Mensagem</button>
+        </form>
+    </div>
+
+    <!-- FAQ Section -->
+    <div class="faq-section">
+        <h2>Perguntas Frequentes</h2>
+
+        <div class="faq-item">
+            <div class="faq-question">⏱️ Qual é o tempo de resposta?</div>
+            <div class="faq-answer">
+                Geralmente respondemos dentro de 24-48 horas em dias úteis. Para questões urgentes de suporte técnico, priorizamos o atendimento e tentamos responder em até 8 horas.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">💼 Como posso fazer parcerias com a AmplaAI?</div>
+            <div class="faq-answer">
+                Envie um e-mail para ampla.ai@outlook.com com o assunto "Parcerias" detalhando sua proposta. Nossa equipe comercial entrará em contato para discutir oportunidades de colaboração.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">🐛 Como reporto um bug ou problema técnico?</div>
+            <div class="faq-answer">
+                Use o formulário acima selecionando "Reportar Bug" como assunto. Inclua o máximo de detalhes possível: o que estava fazendo, o que esperava que acontecesse, e o que realmente aconteceu. Screenshots são muito úteis!
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">💡 Posso sugerir novas funcionalidades?</div>
+            <div class="faq-answer">
+                Sim! Adoramos receber feedback dos nossos usuários. Use o formulário selecionando "Feedback e Sugestões" e descreva sua ideia em detalhes. Avaliamos todas as sugestões para futuras atualizações.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">🔒 Como são tratadas as informações que envio?</div>
+            <div class="faq-answer">
+                Todas as informações enviadas são tratadas com confidencialidade e de acordo com nossa Política de Privacidade. Usamos seus dados apenas para responder à sua solicitação e melhorar nossos serviços.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">📱 Vocês têm outros canais de suporte?</div>
+            <div class="faq-answer">
+                Atualmente, nosso principal canal de suporte é o e-mail. Estamos trabalhando para adicionar novos canais de atendimento em breve, incluindo chat ao vivo e suporte via WhatsApp.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">🌍 Vocês atendem em outros idiomas?</div>
+            <div class="faq-answer">
+                No momento, oferecemos suporte principalmente em português brasileiro. Para solicitações em outros idiomas, faremos o possível para atendê-lo, mas o tempo de resposta pode ser maior.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">📞 Posso ligar para obter suporte?</div>
+            <div class="faq-answer">
+                Atualmente não oferecemos suporte telefônico. Nossa equipe atende exclusivamente por e-mail, o que nos permite documentar melhor as solicitações e fornecer respostas mais detalhadas.
+            </div>
+        </div>
+    </div>
+
+    <div class="info-box" style="margin-top: 40px; text-align: center;">
+        <strong>🚀 Experimente o Claudinei</strong><br>
+        Não encontrou o que procurava? <a href="/" style="color: #667eea; font-weight: 600;">Experimente conversar diretamente com o Claudinei</a> para obter respostas instantâneas!
+    </div>
+</div>
+
+<script>
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+        
+        const name = document.getElementById('name').value;
+        const email = document.getElementById('email').value;
+        const subject = document.getElementById('subject').value;
+        const message = document.getElementById('message').value;
+        
+        // Criar link mailto com os dados do formulário
+        const mailtoLink = `mailto:ampla.ai@outlook.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(`Nome: ${name}\nEmail: ${email}\n\nMensagem:\n${message}`)}`;
+        
+        // Abrir cliente de email
+        window.location.href = mailtoLink;
+        
+        // Feedback visual
+        alert('Seu cliente de e-mail será aberto. Se não abrir automaticamente, envie um e-mail para ampla.ai@outlook.com');
+    });
+</script>
+```
+
+</body>
+</html>
